fixing blurry background for ios

--- a/style/style.css
+++ b/style/style.css
@@ -4,7 +4,7 @@ body{
     background-image: url(../images/natureBackground/natureBackground2.jpg);
     
     background-repeat: no-repeat;
-    background-size: cover;
+
     
 }
 
